--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,16 @@
             text-align: center;
             background-color: #f8f9fa;
         }
-.dis{
-    border-radius: 10px;
-}
+
+        .dis {
+            border-radius: 20px;
+        }
+
+        #image {
+            width: 100%;
+            height: 100%;
+        }
+
         .header {
             background-color: #ff5733;
             color: white;
@@ -51,6 +58,7 @@
             display: block;
             text-decoration: none;
             margin: 5px 0;
+           
         }
 
         .sidebar button {
