--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@
             padding: 0;
             box-sizing: border-box;
         }
-
+       .body1{
+            height: auto;
+            width: auto;
+        }
         body {
             font-family: Arial, sans-serif;
             text-align: center;
