--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
         }
 
         .header {
-            background-color: #ff5733;
+            background-color: #883d69;
             color: white;
             padding: 20px;
             width: 100%;
@@ -53,7 +53,7 @@
 
         .sidebar {
             width: 30%;
-            background-color: #f1c40f;
+            background-color: #2a5553;
             padding: 10px;
         }
 
@@ -89,7 +89,7 @@
         }
 
         .footer {
-            background-color: #8e44ad;
+            background-color: #474242;
             color: white;
             font-size: 18px;
             padding: 15px;
